added connected props

--- a/src/routes/components/app/styles.styl
+++ b/src/routes/components/app/styles.styl
@@ -2,3 +2,8 @@
   background: orange
   color:      white
   padding:    20px
+  transition: background 1000ms ease
+
+.root-loaded
+  composes: root
+  background: green
